examples/test/testpolicy19760.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19760
  namespace: namespace54
spec:
  podSelector:
    matchLabels:
      key11: value21
      key28: value15
      key10: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value25
          key35: value9
          key45: value22
